--- a/roop_check.ipynb
+++ b/roop_check.ipynb
@@ -718,6 +718,69 @@
       "source": [
         "ひとまず完成といっていいだろう"
       ]
+    },
+    {
+      "metadata": {
+        "id": "ydTOqh8E4IEF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 275
+        },
+        "outputId": "77e3cca6-aeb4-44ec-ad7e-c87b16c8193b"
+      },
+      "cell_type": "code",
+      "source": [
+        "img11a =img11[10:40, 10:40]\n",
+        "img29a =img29[10:40, 10:40]\n",
+        "\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.imshow(cv2.cvtColor(img11a, cv2.COLOR_BGR2RGB))\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.imshow(cv2.cvtColor(img29a, cv2.COLOR_BGR2RGB))\n",
+        "plt.show()\n",
+        "\n",
+        "img11a = img11a.flatten()\n",
+        "img29a = img29a.flatten()\n",
+        "\n",
+        "print(img11a.shape)\n",
+        "print(img29a.shape)\n",
+        "\n",
+        "if 0 not in img11a:\n",
+        "  print(\"not number\")\n",
+        "else:\n",
+        "  print(\"number\")\n",
+        "  \n",
+        "if 0 not in img29a:\n",
+        "  print(\"not number\")\n",
+        "else:\n",
+        "  print(\"number\")"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW8AAAC5CAYAAADnLL6SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAACpJJREFUeJzt3V2oHPUZx/HvaUSUQ7W2hUaDIFJ5\noOSquTHQo/EFoyL1IooXIhID3pgilF4o3lhvFINEfMEboUKgUIug8QWxpqVeGkqVWuRRoXiRBOIL\nWqOQJrq9OBvZJCdn9+zO7M5zzvcDA7Ozszv/SZ7z4z//2ZmZ6/V6SJJq+cGsGyBJWjnDW5IKMrwl\nqSDDW5IKMrwlqSDDW5IKOmvcD0bEbuByoAfcm5n7G2uVNEPWtioYq+cdEVcCl2XmZmAH8ESjrZJm\nxNpWFeMOm1wDvAiQme8DF0TEecus33NyanlqirXt1LVpSeOG93rgk4HXn/SXSdVZ2yqhqROWcw19\nj9Q11rY6adzwPsjJvZGLgEOTN0eaOWtbJYwb3m8AtwBExC+Bg5n5VWOtkmbH2lYJc+PeVTAiHgGu\nAL4D7snMd5dZfbyNSKNrbHjD2lbHLFnbY4f3ClngatusxqatbbVtydr2CktJKsjwlqSCDG9JKsjw\nlqSCDG9JKsjwlqSCDG9JKsjwlqSCDG9JKsjwlqSCDG9JKsjwlqSCDG9JKsjwlqSCDG9JKsjwlqSC\nDG9JKuiscT4UEVuAPwP/7i/6V2b+pqlGSbNibauKscK77++ZeUtjLZG6w9pW5zlsIkkFTdLz/kVE\n7AV+DPw+M//SUJukWbO21XljPT0+IjYAvwKeBy4F/gb8PDP/d4aP+IRtta2Rp8db2+qgJWt7rPA+\nVUS8DdyWmf85wyoWuNrWSHifytpWByxZ22ONeUfE7RHxu/78euBnwIHx2yZ1g7WtKsYdNvkh8Efg\nR8DZLI4LvrbMR+ydqG1NDZtY2+qa9oZNRmCBq22tDJuMwNpW25obNpEkzZbhLUkFGd6SVJDhLUkF\nGd6SVJDhLUkFGd6SVJDhLUkFGd6SVJDhLUkFGd6SVJDhLUkFTfIkHUlSg+bmTr8H1ZluHmjPW5IK\nMrwlqSDDW5IKGmnMOyI2Ai8BuzPzqYi4GNgDrAMOAXdk5tH2mim1w9pWVUN73hExDzwJ7BtY/BDw\ndGYuAB8Bd7XTPKk91rYqG2XY5ChwI3BwYNkWYG9//mXg2mabJU2Fta2yhg6bZOZx4HhEDC6eHziU\nPAxc2ELbpFZZ26qsid95z+rBr1LbrG1N1am/6V7qd98njPtrkyMRcW5/fgMnH3ZKlVnbmpm5ubmT\npuWMG95vAtv689uA18f8HqlrrG1NxalBPSysT/v8mS69PCEiNgGPAZcAx4ADwO3Ac8A5wMfA9sw8\ntszXLL8RaXIrHuKwtjVLo4Z1r9dbcsWh4d0QC1xtm9X4tLWtsUwa3l5hKUkFGd6SVJDhLUkFGd6S\nVJDhLUkFGd6SVJDhLUkF+QxLSWrZSq+eHIU9b0kqyPCWpIIMb0kqyPCWpII8YSlJDWrj5ORS7HlL\nUkGGtyQVZHhLUkEjjXlHxEbgJWB3Zj4VEc8Bm4DP+qvsysxX22mi1B5rW1UNDe+ImAeeBPad8tb9\nmflKK62SpsDaVmWjDJscBW7Ep2hr9bG2VdbQnndmHgeOR8Spb+2MiN8Ch4GdmflpC+2TWmNtq7Jx\nT1juAe7LzKuBd4AHG2uRNFvWtibS6/Uam5Yz1kU6mTk4RrgXeGac75G6xtrWpDp9kU5EvBARl/Zf\nbgHea6xF0gxZ26pibljXPCI2AY8BlwDHgAMsnqG/D/gGOAJsz8zDy3zN8huRJrfi7o61rUlMq4fd\n6/WW3NDQ8G5q+9PYiNa06fwlnc7aXqNmHd5eYSlJBRneklSQ4S1JBRneklSQ4S1JBRneklSQ4S1J\nBRneklSQDyCWpCGmdUHOStjzlqSCDG9JKsjwlqSCDG9JKsjwlqSCDG9JKsjwlqSCDG9JKmiki3Qi\n4lFgob/+w8B+Fp+yvQ44BNyRmUfbaqTUButalQ3teUfEVcDGzNwMXA88DjwEPJ2ZC8BHwF2ttlJq\nmHWtM5mbmztt6qJRhk3eAm7tz38BzLP4VO29/WUvA9c23jKpXda1Shs6bJKZ3wJf91/uAF4Dtg4c\nTh4GLmyneVI7rGtVN/KNqSLiZhaL/Drgw4G3unlMIY3Autaper3erJvwveWGbEb6tUlEbAUeAG7I\nzC+BIxFxbv/tDcDBSRspTZt1raUsNeY9q2k5o5ywPB/YBdyUmZ/3F78JbOvPbwNen+DfSpo661pQ\n5+TkUuaGHSJExN3Ag8AHA4vvBJ4FzgE+BrZn5rFlvqY7xyFarVb0V9dQXYO1XVqFsO71eks2cmh4\nN7X9aWxEa9qs/gqt7cIqh7dXWEpSQYa3JBXkMywlqSNWMoxtz1uSCjK8Jakgw1uSCjK8JakgT1hK\nWhMq/KZ7Jex5S1JBhrckFWR4S1JBhrckFeQJS0magUlvCmjPW5IKMrwlqSDDW5IKGmnMOyIeBRb6\n6z8M/BrYBHzWX2VXZr7aSgullljXqmxoeEfEVcDGzNwcET8B/gn8Fbg/M19pu4FSG6zr1e3E1ZS9\nXq8TV1a28cSyUXrebwFv9+e/AOaBdY23RJou61qlregZlv2Hti4A3wLrgbOBw8DOzPx0mY/6nD+1\nbezu1QR1DdZ2J62ynvdkz7CMiJuBHcBOYA9wX2ZeDbzD4lO4pXKs69Wp1+t9H5gn5mc5tWHUE5Zb\ngQeA6zPzS2DfwNt7gWdaaJvUKut69VplPe8lDe15R8T5wC7gpsz8vL/shYi4tL/KFuC9xlsmtci6\nVnWj9LxvA34KPB8RJ5b9AfhTRHwDHAG2t9M8qTXWtUpb0QnLCXhSR22b1bGxtd1Bq2zYZLITlpKk\n7jC8Jakgw1uSCvJ+3pJK68KY9qApnUe05y1JFRneklSQ4S1JBRneklSQ4S1JBRneklSQ4S1JBRne\nklSQ4S1JBXmFpaQyunQ15bSupDwTe96SVJDhLUkFGd6SVJDhLUkFTesxaJKkBtnzlqSCDG9JKsjw\nlqSCDG9JKsjwlqSCDG9JKmiq9zaJiN3A5UAPuDcz909z+5OKiI3AS8DuzHwqIi4G9gDrgEPAHZl5\ndJZtHEVEPAossPj//zCwn4L70RXWdXespdqeWs87Iq4ELsvMzcAO4IlpbbsJETEPPAnsG1j8EPB0\nZi4AHwF3zaJtKxERVwEb+/8P1wOPU3A/usK67o61VtvTHDa5BngRIDPfBy6IiPOmuP1JHQVuBA4O\nLNsC7O3PvwxcO+U2jeMt4Nb+/BfAPDX3oyus6+5YU7U9zWGT9cA/Bl5/0l/23ym2YWyZeRw4HhGD\ni+cHDsEOAxdOvWErlJnfAl/3X+4AXgO2VtuPDrGuO2Kt1fYs7+fdnRvzNqPU/kTEzSwW+HXAhwNv\nldqPDlpt/37l9met1PY0h00OstgjOeEiFk8gVHYkIs7tz2/g5EPPzoqIrcADwA2Z+SVF96MjrOsO\nWUu1Pc3wfgO4BSAifgkczMyvprj9NrwJbOvPbwNen2FbRhIR5wO7gJsy8/P+4nL70SHWdUestdqe\n6l0FI+IR4ArgO+CezHx3ahufUERsAh4DLgGOAQeA24HngHOAj4HtmXlsRk0cSUTcDTwIfDCw+E7g\nWQrtR5dY192w1mrbW8JKUkFeYSlJBRneklSQ4S1JBRneklSQ4S1JBRneklSQ4S1JBRneklTQ/wHT\nzJNFIW5zqgAAAABJRU5ErkJggg==\n",
+            "text/plain": [
+              "<matplotlib.figure.Figure at 0x7f05e7f8ef98>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "(2700,)\n",
+            "(2700,)\n",
+            "not number\n",
+            "number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
