--- a/roop_check.ipynb
+++ b/roop_check.ipynb
@@ -451,7 +451,6 @@
         "    #ここが幅のパラメーター\n",
         "    contours = 20\n",
         "    \n",
-        "    filename = \"img\" + str(i + 1) + str(r + 1)\n",
         "\n",
         "\n",
         "    image = imgDATA[contoursY1 + 5 + contours:contoursY2 + 5 - contours,\n",
@@ -779,6 +778,80 @@
             "number\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "rmTeq3_56H-E",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "動的変数のテスト  \n",
+        "をやってみたら無理だったので辞書に格納"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "tTH1t3AY6KXO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        },
+        "outputId": "dc29853a-6891-44b5-9553-6ac53c130730"
+      },
+      "cell_type": "code",
+      "source": [
+        "code = {}\n",
+        "\n",
+        "for y in range(9):\n",
+        "  for x in range(9):\n",
+        "    coordinate = (str(y + 1) + str(x + 1))\n",
+        "    #print(coordinate)\n",
+        "\n",
+        "\n",
+        "    #ここが変数になる\n",
+        "    contoursY1 = y * 100\n",
+        "    contoursY2 = contoursY1 + 100\n",
+        "    contoursX1 = x * 100\n",
+        "    contoursX2 = contoursX1 + 100\n",
+        "    #ここが幅のパラメーター\n",
+        "    contours = 20\n",
+        "    \n",
+        "    filename = \"img\" + coordinate\n",
+        "\n",
+        "\n",
+        "    image = imgDATA[contoursY1 + 5 + contours:contoursY2 + 5 - contours,\n",
+        "                    contoursX1 + 2 + contours:contoursX2 + 2 - contours]\n",
+        "\n",
+        "\n",
+        "    #二値化\n",
+        "    image = cv2.threshold(image,180,255,cv2.THRESH_BINARY)[1] \n",
+        "    \n",
+        "    #print(filename)\n",
+        "    code[filename] = image\n",
+        "    \n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.imshow(cv2.cvtColor(code[\"img11\"], cv2.COLOR_BGR2RGB))\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.imshow(cv2.cvtColor(code[\"img29\"], cv2.COLOR_BGR2RGB))\n",
+        "plt.show()"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW8AAAC6CAYAAABhuMw8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAC05JREFUeJzt3WGoZHUZx/HvtBFuW1oR6LoKIcQj\n4qsi0GDziktqbvniWr6QTXY3KqgIqncV6fqiUMywlt4YmRuB9qZ2URZZiQw0WKWiIp7aqIW6GytI\n5Yosa00v7tkY5e6dubPnzJnn3u8HBs+cO3vv/wyPP57z/5+ZMxgOh0iSanlD3wOQJK2d4S1JBRne\nklSQ4S1JBRneklSQ4S1JBb1x2n8YEQ8A1wBD4POZebS1UUk9srZVwVSdd0RcB7w7M68F9gIPtjoq\nqSfWtqqYdtrkBuAnAJn5B+DtEXFha6OS+mNtq4Rpp00uAZ4fef5Cs+/f53i9H+NU1wYt/R5rW/Nm\nxdpua8Gyrf9xpHljbWsuTRveSyx3I2ddCpw4/+FIvbO2VcK04f0kcBtARLwHWMrMl1obldQfa1sl\nDKb9VsGI+AbwAeC/wGcy8zervNx5QXWttekNa1tzZsXanjq818gCV9f6mpu2ttW1ThcsJUkzNPUn\nLCXVNRisfKIyHA7P+bNqZnksfdzUxs5bkgoyvCWpIMNbkgoyvCWpIMNbkgoyvCWpIMNbkgoyvCWp\nIMNbkgoyvCWpIMNbkgoyvCWpIMNbkgoyvCWpIL8SVtqAVvsK0z6+3rQrazmWal+FO1F4R8TVwE+B\nBzLzOxFxOXAA2MTyzVl3Zebp7oYpdcPaVlVjp00iYgvwbeCpkd37gP2ZuR04BuzpZnhSd6xtDQaD\n/z+qmWTO+zTwIWBpZN8CcLDZPgTsaHdY0kxY2ypr7LRJZr4KvBoRo7u3jJxKngS2djA2qVPWtirP\n77exYFnvfEOajLW9zp3PdEnfwT/tpYKnImJzs72N1552SpVZ2yph2vA+Aiw224vA4XaGI/XO2lYJ\ng3Gtf0S8F7gfeBdwBvg7cAfwMHABcBzYnZlnVvk1dSeWVMWaz3+t7Y2rjatLZjhtsuJgx4Z3Syxw\nda2v+Wlru6D1EN5+wlLShtDWtdx9L1Se5XebSFJBhrckFWR4S1JBhrckFeSCpaR1rdiVJROz85ak\nggxvSSrI8JakggxvSSrI8Ja07pxdpDzfxcrhcDiXi5VgeEtSSYa3JBXkdd6SNGJep0lez85bkgqy\n85a0LrT1la9VTBTeEXEvsL15/deBo8ABYBNwAtg1csdtqQTrWpWNnTaJiOuBqzPzWuAm4FvAPmB/\nZm4HjgF7Oh2l1DLrWtVNMuf9NPDRZvufwBZgATjY7DsE7Gh9ZFK3rGu9xjxf072SsdMmmfkf4OXm\n6V7gCeDGkdPJk8DWboYndcO6VnUTL1hGxK0sF/kHgT+N/GhjrRJoXbGu14+VuuZKnfRaTXSpYETc\nCHwZuDkz/wWciojNzY+3AUsdjU/qjHW9PgwGgxUfq/3sXK+vZJIFy4uA+4Cdmflis/sIsNhsLwKH\nuxme1A3rWtUNxp1WRMQngbuAP47svhN4CLgAOA7szswzq/ya9XvuonmxptappboGa7t35+qah8Ph\n2I66yLTKigcxNrxbUuIdUml9nfda2z3bqOHtx+MlqSA/Hi+pnIoLjG2z85akguy8JZXRVsddZK57\nVXbeklSQ4S1JBRneklSQ4S1JBblgKWmuuUi5MjtvSSrI8JakggxvSSrI8JakglywlDSXXKhcnZ23\nJBVkeEtSQWOnTSLizcDDwMUs32HkHuA3wAFgE3AC2DVy121p7lnXqm6SzvvDwHOZeR3wMeCbwD5g\nf2ZuB44Be7obotQJ61qlje28M/PRkaeXA38DFoBPN/sOAV8Cvtv24KSuWNfzqe1FyvW6WAlruNok\nIp4BLgN2AkdGTidPAls7GJvUOetaVU28YJmZ7wc+AvyQ194Q0/sRqSzrer4Mh8NWHhvB2PCOiPdG\nxOUAmflrlrv1lyJic/OSbcBSd0OU2mddz5fBYNDqYyOYpPP+APBFgIi4GHgLcARYbH6+CBzuZHRS\nd6xrlTYYd4rRdCLfY3lRZzNwN/Ac8AjLl1gdB3Zn5plVfs3GOI9Rn9bUbrVU12Btt6LtbnmdTZ2s\n+OaMDe+WrKt3UnOpr3Nla7sFbYT3OgvsUSu+OX7CUpIK8oupJPVioywsdsXOW5IKMrwlqSCnTSSV\nto4XKldl5y1JBdl5S5oZ747THjtvSSrI8JakggxvSSrI8JakglywlNQ5FyrbZ+ctSQUZ3pJUkOEt\nSQUZ3pJUkAuWkjrhImW3Jgrv5pZRvwPuAZ4CDgCbgBPArsw83dkIpQ5Z26pq0mmTrwAvNtv7gP2Z\nuR04BuzpYmDSjFjbKmlseEfElcBVwOPNrgXgYLN9CNjRycikjlnbqmySzvt+4Asjz7eMnEqeBLa2\nPippNqztDg2Hw1YeWtmq4R0RHweezcy/nOMl3oROJVnb3RsMBq08tLJxC5a3AFdExE7gMuA0cCoi\nNmfmK8A2YKnjMUpdsLY74lUms7FqeGfm7We3I+Iu4K/A+4FF4IfNfw93NzypG9a2qpvmQzpfA+6M\niF8A7wB+0O6QpN5Y21NymmP2BjM6NfH8R13rKzWsbdqbKhnltMn/rfjm+vF4SSrIj8dLmht225Oz\n85akguy8JU3NBcr+2HlLUkGGtyQV5LSJpN65ULl2dt6SVJCdt6Q1cZFyPth5S1JBhrckFeS0iaRe\nuEh5fuy8JakgO29JE2ljodJuuz123pJUkOEtSQWNnTaJiAXgx8Dvm12/Be4FDgCbgBPArpG7bktz\nz7pWdZN23j/PzIXm8TlgH7A/M7cDx4A9nY1Q6o51rbKmnTZZAA4224eAHa2MRurXAtb1OQ2Hw/N+\nqD2TXm1yVUQcZPmmrHcDW0ZOJ08CW7sYnNQx61plTRLef2K5sB8DrgB+9rp/5xcdqCLrWqWNDe/M\n/DvwaPP0zxHxD+B9EbE5M18BtgFLHY5Rap11rerGznlHxB0R8aVm+xLgYuD7wGLzkkXgcGcjlDpg\nXau6wbhFhIh4K/Aj4G3Am1g+1fwV8AhwAXAc2J2ZZ1b5Na5UqGtrmuZoqa7B2lb3VqztseHdEgtc\nXetrjtraVtdWrG0/YSlJBRneklSQ4S1JBRneklSQ4S1JBRneklSQ4S1JBRneklSQ4S1JBRneklSQ\n4S1JBRneklSQ4S1JBRneklSQ4S1JBRneklSQ4S1JBRneklSQ4S1JBb1xRn+nr/sLSl2zttULO29J\nKsjwlqSCDG9JKsjwlqSCDG9JKsjwlqSCZnKpYEQ8AFwDDIHPZ+bRWfzdtkTEvcB2lt+vrwNHgQPA\nJuAEsCszT/c3wrWJiM3A74B7gKcofCx9s7bnx0ar684774i4Dnh3Zl4L7AUe7PpvtikirgeubsZ/\nE/AtYB+wPzO3A8eAPT0OcRpfAV5stqsfS2+s7bmzoep6FtMmNwA/AcjMPwBvj4gLZ/B32/I08NFm\n+5/AFmABONjsOwTsmP2wphMRVwJXAY83uxYoeixzwNqeExuxrmcR3pcAL4w8f6HZV0Jm/iczX26e\n7gWeALaMnIKdBLb2Mrjp3A98YeR55WPpm7U9PzZcXfexYFny48QRcSvLBf7Z1/2ozPFExMeBZzPz\nL+d4SZljmVMl37/qtb1R63oW4b3Ea7uRS1leQCgjIm4EvgzcnJn/Ak41iyMA21g+xgpuAW6NiF8C\nnwC+St1jmQfW9nzYkHU9i/B+ErgNICLeAyxl5ksz+LutiIiLgPuAnZl5djHkCLDYbC8Ch/sY21pl\n5u2Z+b7MvAZ4iOVV+ZLHMies7TmwUeu680sFM/OZiHg+Ip4B/gt8puu/2bLbgXcCj0XE2X13Ag9F\nxKeA48APehpbG74GPLJOjmWmrO25tu7rejAcDvsegyRpjfyEpSQVZHhLUkGGtyQVZHhLUkGGtyQV\nZHhLUkGGtyQVZHhLUkH/A28ussXNmepSAAAAAElFTkSuQmCC\n",
+            "text/plain": [
+              "<matplotlib.figure.Figure at 0x7f05e7eea3c8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     }
