--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -738,9 +738,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 558
+          "height": 492
         },
-        "outputId": "cf5c51a4-cf4a-4226-bb70-6a1fd16be6f8"
+        "outputId": "7e1923d7-9513-41db-b1ec-c4c67b3ee2f6"
       },
       "cell_type": "code",
       "source": [
@@ -762,7 +762,10 @@
         "    dot.clear()\n",
         "    dot.extend([sqware, X, Y, W, H])\n",
         "\n",
-        "imgC = img[dot[2]+25:dot[2]+dot[4]-25, dot[1]+25:dot[1]+dot[3]-25]\n",
+        "#枠抽出から外を引くパラメーター\n",
+        "area = 20\n",
+        "    \n",
+        "imgC = img[dot[2]+area:dot[2]+dot[4]-area, dot[1]+area:dot[1]+dot[3]-area]\n",
         "imgDATA = cv2.resize(imgC, (900, 900))\n",
         "\n",
         "sudokudata = []\n",
@@ -778,7 +781,7 @@
         "    contoursX1 = x * 100\n",
         "    contoursX2 = contoursX1 + 100\n",
         "    #ここが幅のパラメーター\n",
-        "    contours = 13\n",
+        "    contours = 12\n",
         "    \n",
         "    filename = \"img\" + coordinate\n",
         "\n",
@@ -791,7 +794,7 @@
         "    image = cv2.threshold(image,180,255,cv2.THRESH_BINARY)[1] \n",
         "    \n",
         "    #判定に入る\n",
-        "    checkimg = image[12:38, 12:38]\n",
+        "    checkimg = image[10:40, 10:40]\n",
         "    checkimg = checkimg.flatten()\n",
         "    if 0 not in checkimg:\n",
         "      sudokudata.append(0)\n",
@@ -810,7 +813,7 @@
         "          lang=\"eng\",\n",
         "         builder=pyocr.builders.TextBuilder(tesseract_layout=6))\n",
         "      \n",
-        "      print(\"{}.png:{}\".format(filename, txt))\n",
+        "      #print(\"{}.png:{}\".format(filename, txt))\n",
         "      sudokudata.append(int(txt))\n",
         "\n",
         "\n",
@@ -925,42 +928,40 @@
         "print(\"sucess!\")\n",
         "    "
       ],
-      "execution_count": 25,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "img13.png:3\n",
-            "img14.png:2\n",
-            "img17.png:8\n",
-            "img22.png:2\n",
-            "img25.png:1\n",
-            "img26.png:9\n",
-            "img31.png:9\n",
-            "img38.png:2\n",
-            "img43.png:5\n",
-            "img44.png:1\n",
-            "img47.png:6\n",
-            "img52.png:9\n",
-            "img55.png:6\n",
-            "img56.png:5\n",
-            "img59.png:3\n",
-            "img63.png:7\n",
-            "img64.png:9\n",
-            "img67.png:A\n"
+            "This is the problem!\n",
+            "..3|2..|8..\n",
+            ".2.|.19|..7\n",
+            "9..|...|.2.\n",
+            "-----------\n",
+            "..5|1..|6..\n",
+            ".9.|.65|..3\n",
+            "..7|9..|4..\n",
+            "-----------\n",
+            "..8|5..|9..\n",
+            "5..|...|.6.\n",
+            ".7.|.93|..1\n",
+            "\n",
+            "This is the answer!\n",
+            "713|254|896\n",
+            "824|619|357\n",
+            "956|387|124\n",
+            "-----------\n",
+            "385|142|679\n",
+            "491|765|283\n",
+            "267|938|415\n",
+            "-----------\n",
+            "148|576|932\n",
+            "539|421|768\n",
+            "672|893|541\n",
+            "\n",
+            "sucess!\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-25-7ff3a67b331c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{}.png:{}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtxt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m       \u001b[0msudokudata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtxt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'A'"
-          ]
         }
       ]
     },
