--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -364,81 +364,86 @@
           "base_uri": "https://localhost:8080/",
           "height": 503
         },
-        "outputId": "260a23c0-eb0a-46a6-9d3c-13b6bacc2e36"
+        "outputId": "caa7bf3f-5788-407f-d0d4-eb21bf606f73"
       },
       "cell_type": "code",
       "source": [
-        "img = cv2.imread(\"sudoku.png\")\n",
-        "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-        "gray = cv2.GaussianBlur(gray, (3, 3), 0)\n",
-        "im2 = cv2.threshold(gray, 140, 225, cv2.THRESH_BINARY_INV)[1]\n",
+        "#全部を関数化させてみる\n",
         "\n",
-        "cnts = cv2.findContours(im2, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[1]\n",
+        "def predict_image():\n",
+        "  #img = cv2.imread(name)\n",
+        "  gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "  gray = cv2.GaussianBlur(gray, (3, 3), 0)\n",
+        "  im2 = cv2.threshold(gray, 140, 225, cv2.THRESH_BINARY_INV)[1]\n",
         "\n",
-        "dot = [0, 0, 0, 0, 0]\n",
+        "  cnts = cv2.findContours(im2, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[1]\n",
         "\n",
-        "for pt in cnts:\n",
-        "  X, Y, W, H = cv2.boundingRect(pt)\n",
-        "  #print(X, Y, W, H)\n",
-        "  cv2.rectangle(img, (X, Y), (X+W, Y+H), (0, 255, 0), 30)\n",
-        "  sqware = (W)*(H)\n",
-        "  if sqware > dot[0]:\n",
-        "    dot.clear()\n",
-        "    dot.extend([sqware, X, Y, W, H])\n",
+        "  dot = [0, 0, 0, 0, 0]\n",
         "\n",
-        "#枠抽出から外を引くパラメーター\n",
-        "area = 20\n",
-        "\n",
-        "imgC = img[dot[2]+area:dot[2]+dot[4]-area, dot[1]+area:dot[1]+dot[3]-area]\n",
-        "imgDATA = cv2.resize(imgC, (900, 900))\n",
-        "\n",
-        "sudokudata = []\n",
-        "\n",
-        "for y in range(9):\n",
-        "  for x in range(9):\n",
-        "    coordinate = (str(y + 1) + str(x + 1))\n",
+        "  for pt in cnts:\n",
+        "    X, Y, W, H = cv2.boundingRect(pt)\n",
+        "    cv2.rectangle(img, (X, Y), (X+W, Y+H), (0, 255, 0), 30)\n",
+        "    sqware = (W)*(H)\n",
+        "    if sqware > dot[0]:\n",
+        "      dot.clear()\n",
+        "      dot.extend([sqware, X, Y, W, H])   \n",
+        "  return (dot)\n",
         "\n",
         "\n",
-        "    #ここが変数になる\n",
-        "    contoursY1 = y * 100\n",
-        "    contoursY2 = contoursY1 + 100\n",
-        "    contoursX1 = x * 100\n",
-        "    contoursX2 = contoursX1 + 100\n",
-        "    #ここが幅のパラメーター\n",
-        "    contours = 12\n",
+        "def resize_image(dot, area):\n",
+        "  imgC = img[dot[2]+area:dot[2]+dot[4]-area, dot[1]+area:dot[1]+dot[3]-area]\n",
+        "  imgDATA = cv2.resize(imgC, (900, 900))\n",
+        "  return (imgDATA)\n",
         "\n",
-        "    filename = \"img\" + coordinate\n",
+        "def optical_recognition(imgDATA, contours, recogsize):\n",
+        "  sudokudata = []\n",
+        "\n",
+        "  for y in range(9):\n",
+        "    for x in range(9):\n",
+        "      coordinate = (str(y + 1) + str(x + 1))\n",
+        "\n",
+        "      contoursY1 = y * 100\n",
+        "      contoursY2 = contoursY1 + 100\n",
+        "      contoursX1 = x * 100\n",
+        "      contoursX2 = contoursX1 + 100\n",
+        "\n",
+        "      filename = \"img\" + coordinate\n",
         "\n",
         "\n",
-        "    image = imgDATA[contoursY1 + 5 + contours:contoursY2 + 5 - contours,\n",
-        "                    contoursX1 + 2 + contours:contoursX2 + 2 - contours]\n",
+        "      image = imgDATA[contoursY1 + 5 + contours:contoursY2 + 5 - contours,\n",
+        "                      contoursX1 + 2 + contours:contoursX2 + 2 - contours]\n",
         "\n",
         "\n",
-        "    #二値化\n",
-        "    image = cv2.threshold(image,180,255,cv2.THRESH_BINARY)[1]\n",
+        "      #二値化\n",
+        "      image = cv2.threshold(image,180,255,cv2.THRESH_BINARY)[1]\n",
         "\n",
-        "    #判定に入る\n",
-        "    checkimg = image[10:40, 10:40]\n",
-        "    checkimg = checkimg.flatten()\n",
-        "    if 0 not in checkimg:\n",
-        "      sudokudata.append(0)\n",
-        "    else:\n",
-        "      #print(\"number\")\n",
-        "      #まだ完成形ではないため、数字をpngで出力して余白を追加させる\n",
-        "      cv2.imwrite(\"{}.png\".format(filename), image)\n",
+        "      #判定に入る\n",
+        "      sizeX = (50-int(recogsize))/2\n",
+        "      sizeY = sizeX + int(recogsize)\n",
+        "      checkimg = image[int(sizeX):int(sizeY), int(sizeX):int(sizeY)]\n",
+        "      checkimg = checkimg.flatten()\n",
+        "      if 0 not in checkimg:\n",
+        "        sudokudata.append(0)\n",
+        "      else:\n",
+        "        #print(\"number\")\n",
+        "        #まだ完成形ではないため、数字をpngで出力して余白を追加させる\n",
+        "        cv2.imwrite(\"{}.png\".format(filename), image)\n",
         "\n",
-        "      newimg = Image.open(\"{}.png\".format(filename))\n",
-        "      imgwhite = Image.open('white50.png')\n",
-        "      imgwhite.paste(newimg, (25, 25))\n",
-        "      imgwhite.save(\"{}a.png\".format(filename), quality=95)\n",
+        "        newimg = Image.open(\"{}.png\".format(filename))\n",
+        "        imgwhite = Image.open('white50.png')\n",
+        "        imgwhite.paste(newimg, (25, 25))\n",
+        "        imgwhite.save(\"{}a.png\".format(filename), quality=95)\n",
         "\n",
-        "      txt = tool.image_to_string(\n",
-        "          Image.open(\"{}a.png\".format(filename)),\n",
-        "          lang=\"eng\",\n",
-        "          builder=pyocr.builders.TextBuilder(tesseract_layout=6))\n",
+        "        txt = tool.image_to_string(\n",
+        "            Image.open(\"{}a.png\".format(filename)),\n",
+        "            lang=\"eng\",\n",
+        "            builder=pyocr.builders.TextBuilder(tesseract_layout=6))\n",
         "\n",
-        "      #print(\"{}.png:{}\".format(filename, txt))\n",
-        "      sudokudata.append(int(txt))\n",
+        "        sudokudata.append(int(txt))\n",
+        "        \n",
+        "  values = encode(str(sudokudata))\n",
+        "  return (values)\n",
+        "        \n",
         "#Pythonで数独\n",
         "\n",
         "def encode(grid):\n",
@@ -539,8 +544,20 @@
         "            print (\"-------------------\")\n",
         "    print(\"\")\n",
         "\n",
+        "    \n",
+        "#入力するもの一覧\n",
+        "name = \"sudoku.png\" #画像の名前\n",
+        "area = 20 #枠抽出から外を引くパラメーター\n",
+        "contours = 12 #一つ一つの数字画像の周りをくりぬくパラメーター\n",
+        "recogsize = 30 #数字か空白か判定する際の枠(50*50の画像で中心からの大きさ)\n",
         "\n",
-        "values = encode(str(sudokudata))\n",
+        "\n",
+        "img = cv2.imread(name)\n",
+        "dot = predict_image()\n",
+        "imgDATA = resize_image(dot, area)\n",
+        "values = optical_recognition(imgDATA, contours, recogsize)\n",
+        "\n",
+        "\n",
         "print(\"This is the problem!\")\n",
         "output(values)\n",
         "main(values)\n",
@@ -549,7 +566,253 @@
         "\n",
         "print(\"sucess!\")"
       ],
-      "execution_count": 10,
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "This is the problem!\n",
+            "..3|2..|8..\n",
+            ".2.|.19|..7\n",
+            "9..|...|.2.\n",
+            "-------------------\n",
+            "..5|1..|6..\n",
+            ".9.|.65|..3\n",
+            "..7|9..|4..\n",
+            "-------------------\n",
+            "..8|5..|9..\n",
+            "5..|...|.6.\n",
+            ".7.|.93|..1\n",
+            "\n",
+            "This is the answer!\n",
+            "713|254|896\n",
+            "824|619|357\n",
+            "956|387|124\n",
+            "-------------------\n",
+            "385|142|679\n",
+            "491|765|283\n",
+            "267|938|415\n",
+            "-------------------\n",
+            "148|576|932\n",
+            "539|421|768\n",
+            "672|893|541\n",
+            "\n",
+            "sucess!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "fU85WEQfWkLs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 503
+        },
+        "outputId": "2992f155-2494-4da8-bc2f-37c1d211b13d"
+      },
+      "cell_type": "code",
+      "source": [
+        "#引き渡しなどをすべて調整し終えて関数化完成！\n",
+        "\n",
+        "def predict_image(area, contours, recogsize):\n",
+        "  #img = cv2.imread(name)\n",
+        "  gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "  gray = cv2.GaussianBlur(gray, (3, 3), 0)\n",
+        "  im2 = cv2.threshold(gray, 140, 225, cv2.THRESH_BINARY_INV)[1]\n",
+        "\n",
+        "  cnts = cv2.findContours(im2, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[1]\n",
+        "\n",
+        "  dot = [0, 0, 0, 0, 0]\n",
+        "\n",
+        "  for pt in cnts:\n",
+        "    X, Y, W, H = cv2.boundingRect(pt)\n",
+        "    cv2.rectangle(img, (X, Y), (X+W, Y+H), (0, 255, 0), 30)\n",
+        "    sqware = (W)*(H)\n",
+        "    if sqware > dot[0]:\n",
+        "      dot.clear()\n",
+        "      dot.extend([sqware, X, Y, W, H]) \n",
+        "      \n",
+        "  values = resize_image(area, contours, recogsize, dot)\n",
+        "  return (values)\n",
+        "\n",
+        "\n",
+        "def resize_image(area, contours, recogsize, dot):\n",
+        "  imgC = img[dot[2]+area:dot[2]+dot[4]-area, dot[1]+area:dot[1]+dot[3]-area]\n",
+        "  imgDATA = cv2.resize(imgC, (900, 900))\n",
+        "  values = optical_recognition(area, contours, recogsize, dot, imgDATA)\n",
+        "  return (values)\n",
+        "\n",
+        "def optical_recognition(area, contours, recogsize, dot, imgDATA):\n",
+        "  sudokudata = []\n",
+        "\n",
+        "  for y in range(9):\n",
+        "    for x in range(9):\n",
+        "      coordinate = (str(y + 1) + str(x + 1))\n",
+        "\n",
+        "      contoursY1 = y * 100\n",
+        "      contoursY2 = contoursY1 + 100\n",
+        "      contoursX1 = x * 100\n",
+        "      contoursX2 = contoursX1 + 100\n",
+        "\n",
+        "      filename = \"img\" + coordinate\n",
+        "\n",
+        "\n",
+        "      image = imgDATA[contoursY1 + 5 + contours:contoursY2 + 5 - contours,\n",
+        "                      contoursX1 + 2 + contours:contoursX2 + 2 - contours]\n",
+        "\n",
+        "\n",
+        "      #二値化\n",
+        "      image = cv2.threshold(image,180,255,cv2.THRESH_BINARY)[1]\n",
+        "\n",
+        "      #判定に入る\n",
+        "      sizeX = (50-int(recogsize))/2\n",
+        "      sizeY = sizeX + int(recogsize)\n",
+        "      checkimg = image[int(sizeX):int(sizeY), int(sizeX):int(sizeY)]\n",
+        "      checkimg = checkimg.flatten()\n",
+        "      if 0 not in checkimg:\n",
+        "        sudokudata.append(0)\n",
+        "      else:\n",
+        "        #print(\"number\")\n",
+        "        #まだ完成形ではないため、数字をpngで出力して余白を追加させる\n",
+        "        cv2.imwrite(\"{}.png\".format(filename), image)\n",
+        "\n",
+        "        newimg = Image.open(\"{}.png\".format(filename))\n",
+        "        imgwhite = Image.open('white50.png')\n",
+        "        imgwhite.paste(newimg, (25, 25))\n",
+        "        imgwhite.save(\"{}a.png\".format(filename), quality=95)\n",
+        "\n",
+        "        txt = tool.image_to_string(\n",
+        "            Image.open(\"{}a.png\".format(filename)),\n",
+        "            lang=\"eng\",\n",
+        "            builder=pyocr.builders.TextBuilder(tesseract_layout=6))\n",
+        "\n",
+        "        sudokudata.append(int(txt))\n",
+        "        \n",
+        "  values = encode(str(sudokudata))\n",
+        "  return (values)\n",
+        "        \n",
+        "#Pythonで数独\n",
+        "\n",
+        "def encode(grid):\n",
+        "    \"テキストから２次元配列のvaluesを作成する\"\n",
+        "    values = []\n",
+        "    digits = \"123456789\"\n",
+        "    chars = [c for c in grid if c in digits or c in '0.']\n",
+        "    assert len(chars) == 81\n",
+        "    grid_int = map(lambda x: int(x) if x != \".\" else 0, chars)\n",
+        "\n",
+        "    count = 0\n",
+        "    row = []\n",
+        "    for i in grid_int:\n",
+        "        row.append(i)\n",
+        "        count += 1\n",
+        "        if count % 9 == 0: #行毎に分割\n",
+        "            values.append(row)\n",
+        "            row = []\n",
+        "    return values\n",
+        "\n",
+        "def main(data):\n",
+        "  if solve(0, 0, data):\n",
+        "    #printtable(data)\n",
+        "    return data\n",
+        "  else:\n",
+        "    print (\"This problem is unsolvable\")\n",
+        "\n",
+        "def solve(x, y, table):\n",
+        "  if x == 0 and y == 9:\n",
+        "    return True\n",
+        "\n",
+        "  if table[y][x] == 0:\n",
+        "    for t in range(1, 10):\n",
+        "      table[y][x] = t\n",
+        "      if check(x, y, table):\n",
+        "        (nx, ny) = next(x, y)\n",
+        "        if solve(nx, ny, table):\n",
+        "          return True\n",
+        "    table[y][x] = 0\n",
+        "    return False\n",
+        "  else:\n",
+        "    (nx, ny) = next(x, y)\n",
+        "    if solve(nx, ny, table):\n",
+        "      return True\n",
+        "\n",
+        "def next(x, y):\n",
+        "  x += 1\n",
+        "  if x > 8:\n",
+        "    x = 0\n",
+        "    y += 1\n",
+        "  return (x, y)\n",
+        "\n",
+        "def check(x, y, table):\n",
+        "  return row(x, y, table) and column(x, y, table) and block(x, y, table)\n",
+        "\n",
+        "def column(x, y, table):\n",
+        "  for yt in range(9):\n",
+        "    if yt != y:\n",
+        "      if table[y][x] == table[yt][x]:\n",
+        "        return False\n",
+        "  return True\n",
+        "\n",
+        "def row(x, y, table):\n",
+        "  for xt in range(9):\n",
+        "    if xt != x:\n",
+        "      if table[y][x] == table[y][xt]:\n",
+        "        return False\n",
+        "  return True\n",
+        "\n",
+        "def block(x, y, table):\n",
+        "  xbase = (x // 3) * 3\n",
+        "  ybase = (y // 3) * 3\n",
+        "  for yt in range(ybase, ybase + 3):\n",
+        "    for xt in range(xbase, xbase + 3):\n",
+        "      if xt != x and yt != y:\n",
+        "        if table[y][x] == table[yt][xt]:\n",
+        "          return False\n",
+        "  return True\n",
+        "\n",
+        "def printtable(table):\n",
+        "  for y in range(9):\n",
+        "    for x in range(9):\n",
+        "      print (table[y][x])\n",
+        "    print (\"\")\n",
+        "\n",
+        "def output(data):\n",
+        "    for i in range(9):\n",
+        "        for j in range (9):\n",
+        "            if data[i][j] == 0:\n",
+        "                print (\".\", end=\"\")\n",
+        "            else:\n",
+        "                print (data[i][j], end=\"\")\n",
+        "\n",
+        "            if (j+1) % 3 == 0 and j < 8:\n",
+        "                print (\"|\", end=\"\")\n",
+        "        print(\"\")\n",
+        "        if (i+1) % 3 == 0 and i < 8:\n",
+        "            print (\"-------------------\")\n",
+        "    print(\"\")\n",
+        "\n",
+        "    \n",
+        "#調整するパラメーター一覧\n",
+        "name = \"sudoku.png\" #画像の名前\n",
+        "area = 20 #枠抽出から外を引くパラメーター\n",
+        "contours = 12 #一つ一つの数字画像の周りをくりぬくパラメーター\n",
+        "recogsize = 30 #数字か空白か判定する際の枠(50*50の画像で中心からの大きさ)\n",
+        "\n",
+        "\n",
+        "img = cv2.imread(name)\n",
+        "values = predict_image(area, contours, recogsize)\n",
+        "print(\"This is the problem!\")\n",
+        "output(values)\n",
+        "main(values)\n",
+        "print(\"This is the answer!\")\n",
+        "output(values)\n",
+        "\n",
+        "print(\"sucess!\")"
+      ],
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
